Frontend: Code cleanup and improvements

--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -23,7 +23,7 @@
 </head>
 
 
-<body class="bg-secondary3-800">
+<body>
     <img src="../assets/hero_image.jpg" alt="Sample Image" class="img-fluid hero-image">
 
     <div class="welcome-text text-center">
