--- a/Applied Sciences Research Center Website/wwwroot/html/login.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/login.html
@@ -20,7 +20,7 @@
     <title>Home Page</title>
 </head>
 
-<body class="bg-secondary3-800">
+<body>
     <div class="">
         <div class="container d-flex justify-content-center align-items-center">
             <div class="outer-white-box">
