--- a/Applied Sciences Research Center Website/wwwroot/html/contact-us.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/contact-us.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../css/style.css">
 
     <link rel="stylesheet" href="../css/contact_us.css">
-    <script src="../js/home.js"></script>
+    <script src="../js/contact_us.js"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
@@ -23,7 +23,7 @@
 
 </head>
 
-<body class="bg-secondary3-800">
+<body>
     <nav class="navbar navbar-expand-lg navbar-light navbar-first">
         <div class="container-fluid">
             <a class="navbar-brand" href="#" style="color: var(--primary-dark);">Brand</a>
