Frontend: Code cleanup and improvements

--- a/Applied Sciences Research Center Website/wwwroot/html/login.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/login.html
@@ -21,16 +21,15 @@
 </head>
 
 <body>
-    <div class="">
+    <div>
         <div class="container d-flex justify-content-center align-items-center">
             <div class="outer-white-box">
                 <div class="gradient">
-                    <div class="card gradient-inner">
+                    <div class="inner-container">
                         <div class="text-center mb-4">
                             <h1 class="fw-bold text-primary">Sign In</h1>
                             <p class="text-secondary">Welcome back! Please sign in to continue.</p>
                         </div>
-                        <!-- <form id="signInForm" > -->
                         <form id="signInForm" method="POST" action="#">
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email Address</label>
