--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -35,7 +35,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#" style="color: var(--primary-dark);">Brand</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -58,7 +58,8 @@
                 </form>
                 <form>
                     <div id="logged-in-options" hidden>
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             <i class=" bi bi-person-circle "></i>
                         </button>
                         <ul class=" dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
@@ -76,7 +77,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand d-sm-block d-lg-none" href="#">Research Pages</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#researchNavbar"
-                        aria-controls="researchNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                    aria-controls="researchNavbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="researchNavbar">
@@ -95,22 +96,22 @@
                         <div class="mb-3">
                             <label for="researchTitle" class="form-label">Research Title</label>
                             <input type="text" class="form-control input-container" id="researchTitle"
-                                   placeholder="Enter research title">
+                                placeholder="Enter research title">
                         </div>
                         <div class="mb-3">
                             <label for="researchDescription" class="form-label">Research Description</label>
                             <textarea class="form-control input-container" id="researchDescription" rows="7" cols="50"
-                                      maxlength="1000" oninput="updateCharCount()"
-                                      placeholder="Write your research description here"></textarea>
+                                maxlength="1000" oninput="updateCharCount()"
+                                placeholder="Write your research description here"></textarea>
                             <div id="char-count" class="char-count">Character count: 0 / 1000</div>
                         </div>
                         <div class="mb-3">
                             <label for="ResearchUrl" class="form-label">Research paper Url</label>
                             <input type="text" class="form-control input-container" id="ResearchUrl"
-                                   placeholder="Enter Research paper Url here"></input>
+                                placeholder="Enter Research paper Url here"></input>
                         </div>
                         <button type="submit"
-                                class="mx-auto mt-2 min-w-[148px] rounded-full bg-black px-6 py-3 font-semibold leading-5 tracking-[0.8px] text-white !ring-offset-primary-600 transition-all hover:bg-primary-400 focus:ring-2 active:bg-primary-300">
+                            class="mx-auto mt-2 min-w-[148px] rounded-full bg-black px-6 py-3 font-semibold leading-5 tracking-[0.8px] text-white !ring-offset-primary-600 transition-all hover:bg-primary-400 focus:ring-2 active:bg-primary-300">
                             Submit
                         </button>
                     </form>
@@ -122,6 +123,46 @@
             <!-- Getting from jQuery -->
         </div>
     </div>
+
+    <!-- Contact Us Section -->
+    <section id="contact-us" class="py-5">
+        <div class="container">
+            <div class="contact-us-section">
+                <h2 class="text-center mb-4">Contact Us</h2>
+                <div class="row">
+                    <div class="col-md-6">
+                        <form>
+                            <div class="mb-3">
+                                <label for="name" class="form-label">Name</label>
+                                <input type="text" class="form-control input-container" id="name"
+                                    placeholder="Your name...">
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email</label>
+                                <input type="email" class="form-control input-container" id="email"
+                                    placeholder="Your email...">
+                            </div>
+                            <div class="mb-3">
+                                <label for="message" class="form-label">Message</label>
+                                <textarea class="form-control input-container" id="message" rows="5"
+                                    placeholder="Type your question..."></textarea>
+                            </div>
+                            <button type="submit"
+                                class="mr-auto mt-4 flex rounded-full bg-[#ED8F68] px-6 py-3 text-base/5 font-semibold tracking-[0.8px] text-[#1F0B04] transition-all duration-300 ease-out hover:bg-black hover:text-white active:scale-95 md:px-8 md:py-4">Submit</button>
+                        </form>
+                    </div>
+                    <div class="col-md-6">
+                        <p>If you have any questions, feel free to reach out to us. We're here to help!</p>
+                        <ul class="list-unstyled">
+                            <li><strong>Address:</strong> 123 Main Street, City, Country</li>
+                            <li><strong>Phone:</strong> +1 234 567 890</li>
+                            <li><strong>Email:</strong> contact@ourwebsite.com</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="py-4 bg-dark text-light">
