--- a/Applied Sciences Research Center Website/wwwroot/html/journal.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/journal.html
@@ -247,7 +247,8 @@
                     every month.
                 </p>
                 <form class="newsletter-form">
-                    <div class="input-container">
+                    <!-- style added here -->
+                    <div class="input-container" style="padding: 0;">
                         <input type="email" class="newsletter-input" placeholder="Your email..." required>
                         <button type="submit" class="subscribe-button">Subscribe</button>
                     </div>
