--- a/Applied Sciences Research Center Website/wwwroot/html/journal.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/journal.html
@@ -118,6 +118,37 @@
 
     <div class="container py-5">
         <div class="row g-4">
+            <div class="text-center">
+                <p>Loading content, please wait...</p>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container py-5">
+        <div class="row g-4">
+            <div class="col-md-4">
+                <div class="card blog-card">
+                    <img style="border-radius: 24px;"
+                        src="https://images.unsplash.com/photo-1501290741922-b56c0d0884af?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        class="card-img-top" alt="Journal image">
+                </div>
+                <div class="card-body">
+                    <span class="blog-tag">Journal presented at Event...</span>
+                    <h5 class="card-title mt-2 underline-hover">Title</h5>
+                    <p class="card-text">Sub Title</p>
+                    <p class="blog-meta">January 10, 2025 • 6 min read</p>
+                    <div class="dropdown position-absolute " style="top: 10px; right: 10px;">
+                        <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton1"
+                            data-bs-toggle="dropdown" aria-expanded="false"></i>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item bi bi-trash" href="#">Delete</a></li>
+                            <li><a class="dropdown-item bi bi-pen" href="#">Modify</a></li>
+                            <li><a class="dropdown-item bi bi-eye" href="#">Show/Hide</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-4">
                 <div class="card blog-card">
                     <img src="" class="card-img-top" alt="Journal image">
@@ -138,6 +169,7 @@
                     </div>
                 </div>
             </div>
+
 
             <div class="col-md-4">
                 <div class="card blog-card">
