--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -44,7 +44,7 @@
                         <a class="nav-link" id="nav-home-button">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Journal</a>
+                        <a class="nav-link" id="nav-journal-button">Journal</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Events</a>
