--- a/Applied Sciences Research Center Website/wwwroot/html/journal.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/journal.html
@@ -123,7 +123,7 @@
         </div>
     </div>
 
-
+    <!-- TODO Clean (Remove dummy research papers) -->
     <div class="container py-5">
         <div class="row g-4">
             <div class="col-md-4">
