--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -108,10 +108,10 @@
                         <div class="mb-3">
                             <label for="ResearchUrl" class="form-label">Research paper Url</label>
                             <input type="text" class="form-control input-container" id="ResearchUrl"
-                                placeholder="Enter Research paper Url here"></input>
+                                placeholder="Enter Research paper Url here">
                         </div>
                         <button id="add-research-paper-button"
-                                class="mx-auto mt-2 min-w-[148px] rounded-full bg-black px-6 py-3 font-semibold leading-5 tracking-[0.8px] text-white !ring-offset-primary-600 transition-all hover:bg-primary-400 focus:ring-2 active:bg-primary-300">
+                            class="mx-auto mt-2 min-w-[148px] rounded-full bg-black px-6 py-3 font-semibold leading-5 tracking-[0.8px] text-white !ring-offset-primary-600 transition-all hover:bg-primary-400 focus:ring-2 active:bg-primary-300">
                             Submit
                         </button>
                     </div>
