--- a/Applied Sciences Research Center Website/wwwroot/html/journal.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/journal.html
@@ -85,7 +85,7 @@
     </div>
 
     <div class="container my-5" id="add-research-paper">
-        <div class="card shadow-sm" style="border-radius: 30px; background-color: #F8F9FA;">
+        <div class="card shadow-sm" style="border-radius: 24px; background-color: #F8F9FA;">
             <div class="card-body">
                 <h5 class="card-title">Add a New Research Paper</h5>
                 <form id="add-research-form">
@@ -104,7 +104,7 @@
                     <div class="mb-3">
                         <label for="ResearchUrl" class="form-label">Research paper Url</label>
                         <input type="text" class="form-control input-container" id="ResearchUrl"
-                            placeholder="Enter Research paper Url here"></input>
+                            placeholder="Enter Research paper Url here">
                     </div>
                     <button type="submit"
                         class="mx-auto mt-2 min-w-[148px] rounded-full bg-black px-6 py-3 font-semibold leading-5 tracking-[0.8px] text-white !ring-offset-primary-600 transition-all hover:bg-primary-400 focus:ring-2 active:bg-primary-300">
@@ -138,9 +138,9 @@
                     <p class="card-text">Sub Title</p>
                     <p class="blog-meta">January 10, 2025 • 6 min read</p>
                     <div class="dropdown position-absolute " style="top: 10px; right: 10px;">
-                        <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton1"
+                        <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton"
                             data-bs-toggle="dropdown" aria-expanded="false"></i>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                             <li><a class="dropdown-item bi bi-trash" href="#">Delete</a></li>
                             <li><a class="dropdown-item bi bi-pen" href="#">Modify</a></li>
                             <li><a class="dropdown-item bi bi-eye" href="#">Show/Hide</a></li>
@@ -205,9 +205,9 @@
                         </p>
                         <p class="blog-meta">January 11, 2025 • 4 min read</p>
                         <div class="dropdown position-absolute " style="top: 10px; right: 10px;">
-                            <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton1"
+                            <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton"
                                 data-bs-toggle="dropdown" aria-expanded="false"></i>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <li><a class="dropdown-item bi bi-trash" href="#">Delete</a></li>
                                 <li><a class="dropdown-item bi bi-pen" href="#">Modify</a></li>
                                 <li><a class="dropdown-item bi bi-eye" href="#">Show/Hide</a></li>
@@ -228,9 +228,9 @@
                         </p>
                         <p class="blog-meta">January 02, 2025 • 105 pages</p>
                         <div class="dropdown position-absolute " style="top: 10px; right: 10px;">
-                            <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton1"
+                            <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton"
                                 data-bs-toggle="dropdown" aria-expanded="false"></i>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <li><a class="dropdown-item bi bi-trash" href="#">Delete</a></li>
                                 <li><a class="dropdown-item bi bi-pen" href="#">Modify</a></li>
                                 <li><a class="dropdown-item bi bi-eye" href="#">Show/Hide</a></li>
@@ -251,9 +251,9 @@
                         </p>
                         <p class="blog-meta">December 30, 2024 • 5 min read</p>
                         <div class="dropdown position-absolute " style="top: 10px; right: 10px;">
-                            <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton1"
+                            <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton"
                                 data-bs-toggle="dropdown" aria-expanded="false"></i>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <li><a class="dropdown-item bi bi-trash" href="#">Delete</a></li>
                                 <li><a class="dropdown-item bi bi-pen" href="#">Modify</a></li>
                                 <li><a class="dropdown-item bi bi-eye" href="#">Show/Hide</a></li>
@@ -280,8 +280,7 @@
                     every month.
                 </p>
                 <form class="newsletter-form">
-                    <!-- style added here -->
-                    <div class="input-container" style="padding: 0;">
+                    <div class="input-container-newsletter" style="padding: 0;">
                         <input type="email" class="newsletter-input" placeholder="Your email..." required>
                         <button type="submit" class="subscribe-button">Subscribe</button>
                     </div>
