--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -147,8 +147,9 @@
                                 <textarea class="form-control input-container" id="message" rows="5"
                                     placeholder="Type your question..."></textarea>
                             </div>
-                            <button type="submit"
-                                class="mr-auto mt-4 flex rounded-full bg-[#ED8F68] px-6 py-3 text-base/5 font-semibold tracking-[0.8px] text-[#1F0B04] transition-all duration-300 ease-out hover:bg-black hover:text-white active:scale-95 md:px-8 md:py-4">Submit</button>
+                            <button type="submit" id="signup-button">
+                                Submit
+                            </button>
                         </form>
                     </div>
                     <div class="col-md-6">
@@ -163,6 +164,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- Footer -->
     <footer class="py-4 bg-dark text-light">
