frontend: contact page removed
contact page updated to about us page and all the names except link to that page in navbar

--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="#">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="nav-contact-button">Contact Us</a>
+                        <a class="nav-link" id="nav-contact-button">About Us</a>
                     </li>
                 </ul>
                 <form>
