--- a/Applied Sciences Research Center Website/wwwroot/html/contact-us.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/contact-us.html
@@ -14,7 +14,7 @@
     <script src="../js/script.js"></script>
     <link rel="stylesheet" href="../css/style.css">
 
-    <link rel="stylesheet" href="../css/contact_us.css">
+    <link rel="stylesheet" href="../css/about_us.css">
     <script src="../js/contact_us.js"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="#">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="nav-contact-button">Contact Us</a>
+                        <a class="nav-link" id="nav-contact-button">About Us</a>
                     </li>
                 </ul>
                 <form>
