--- a/Applied Sciences Research Center Website/wwwroot/html/journal.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/journal.html
@@ -133,19 +133,24 @@
                         class="card-img-top" alt="Journal image">
                 </div>
                 <div class="card-body">
-                    <span class="blog-tag">Journal presented at Event...</span>
+                    <div class="container m-0 p-0">
+                        <div class="row p-0">
+                            <div class="blog-tag col-11">Journal presented at Event...</div>
+                            <div class="dropdown col-1 m-0" style="top: -9px">
+                                <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
+                                    aria-expanded="false"></i>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    <li><a class="dropdown-item bi bi-trash" href="#">Delete</a></li>
+                                    <li><a class="dropdown-item bi bi-pen" href="#">Modify</a></li>
+                                    <li><a class="dropdown-item bi bi-eye" href="#">Show/Hide</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                     <h5 class="card-title mt-2 underline-hover">Title</h5>
                     <p class="card-text">Sub Title</p>
                     <p class="blog-meta">January 10, 2025 • 6 min read</p>
-                    <div class="dropdown position-absolute " style="top: 10px; right: 10px;">
-                        <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton"
-                            data-bs-toggle="dropdown" aria-expanded="false"></i>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <li><a class="dropdown-item bi bi-trash" href="#">Delete</a></li>
-                            <li><a class="dropdown-item bi bi-pen" href="#">Modify</a></li>
-                            <li><a class="dropdown-item bi bi-eye" href="#">Show/Hide</a></li>
-                        </ul>
-                    </div>
+
                 </div>
             </div>
             <div class="col-md-4">
@@ -157,7 +162,7 @@
                         <h5 class="card-title mt-2">Title</h5>
                         <p class="card-text">Sub Title</p>
                         <p class="blog-meta">January 10, 2025 • 6 min read</p>
-                        <div class="dropdown position-absolute " style="top: 10px; right: 10px;">
+                        <div class="dropdown position-absolute " style="top: 150px; right: 0px;">
                             <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton"
                                 data-bs-toggle="dropdown" aria-expanded="false"></i>
                             <ul class="dropdown-menu " aria-labelledby="dropdownMenuButton">
@@ -204,7 +209,7 @@
                             Sub Title
                         </p>
                         <p class="blog-meta">January 11, 2025 • 4 min read</p>
-                        <div class="dropdown position-absolute " style="top: 10px; right: 10px;">
+                        <div class="dropdown position-absolute " style="top: 150px; right: 0px;">
                             <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton"
                                 data-bs-toggle="dropdown" aria-expanded="false"></i>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
