--- a/Applied Sciences Research Center Website/wwwroot/html/journal.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/journal.html
@@ -137,7 +137,7 @@
                         <div class="row p-0">
                             <div class="blog-tag col-11">Journal presented at Event...</div>
                             <div class="dropdown col-1 m-0" style="top: -9px">
-                                <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
+                                <i class="bi bi-three-dots-vertical btn" type="button" data-bs-toggle="dropdown"
                                     aria-expanded="false"></i>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                     <li><a class="dropdown-item bi bi-trash" href="#">Delete</a></li>
