--- a/Applied Sciences Research Center Website/wwwroot/html/contact-us.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/contact-us.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" id="nav-home-button">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="nav-journal-button">Journal</a>
+                        <a class="nav-link" id="nav-publications-button">Publications</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Events</a>
@@ -51,7 +51,7 @@
                 <form>
                     <div id="logged-in-options" hidden>
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                                data-bs-toggle="dropdown" aria-expanded="false">
                             <i class=" bi bi-person-circle "></i>
                         </button>
                         <ul class=" dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
