--- a/Applied Sciences Research Center Website/wwwroot/html/publications.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/publications.html
@@ -14,8 +14,8 @@
     <script src="../js/script.js"></script>
     <link rel="stylesheet" href="../css/style.css">
 
-    <link rel="stylesheet" href="../css/journal.css">
-    <script src="../js/journal.js"></script>
+    <link rel="stylesheet" href="../css/publications.css">
+    <script src="../js/publications.js"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <title>About Us</title>
@@ -37,13 +37,13 @@
                         <a class="nav-link" id="nav-home-button">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="nav-journal-button">Journal</a>
+                        <a class="nav-link" id="nav-publications-button">Publications</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="nav-contact-button">Contact Us</a>
+                        <a class="nav-link" id="nav-contact-button">About Us</a>
                     </li>
                 </ul>
                 <form>
@@ -52,7 +52,7 @@
                 <form>
                     <div id="logged-in-options" hidden>
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                                data-bs-toggle="dropdown" aria-expanded="false">
                             <i class=" bi bi-person-circle "></i>
                         </button>
                         <ul class=" dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
