Front end: Minor bug fix

--- a/Applied Sciences Research Center Website/wwwroot/html/publications.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/publications.html
@@ -33,17 +33,17 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" id="nav-home-button">Home</a>
+                    <li class="pe-auto nav-item">
+                        <a class="pe-auto nav-link" id="nav-home-button" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="nav-publications-button">Publications</a>
+                    <li class="pe-auto nav-item">
+                        <a class="nav-link" id="nav-publications-button" href="#">Publications</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="nav-contact-button">About Us</a>
+                        <a class="nav-link" id="nav-contact-button" href="#">About Us</a>
                     </li>
                 </ul>
                 <form>
