Frontend: Minor fix

--- a/Applied Sciences Research Center Website/wwwroot/html/publications.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/publications.html
@@ -57,7 +57,7 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
                             <li><a class="dropdown-item" href="#userPanel">User Panel</a></li>
-                            <li><a class="dropdown-item" id="logout-button">Log Out</a></li>
+                            <li><a class="dropdown-item" href="#" id="logout-button">Log Out</a></li>
                         </ul>
                     </div>
                 </form>
