--- a/Applied Sciences Research Center Website/wwwroot/html/publications.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/publications.html
@@ -88,7 +88,7 @@
         <div class="card shadow-sm" style="border-radius: 24px; background-color: #F8F9FA;">
             <div class="card-body">
                 <h5 class="card-title">Add a New Research Paper</h5>
-                <form id="add-research-form">
+                <form>
                     <div class="mb-3">
                         <label for="researchTitle" class="form-label">Research Title</label>
                         <input type="text" class="form-control input-container" id="researchTitle"
@@ -106,7 +106,7 @@
                         <input type="text" class="form-control input-container" id="ResearchUrl"
                             placeholder="Enter Research paper Url here">
                     </div>
-                    <button type="submit"
+                    <button type="submit" id="add-publication-button"
                         class="mx-auto mt-2 min-w-[148px] rounded-full bg-black px-6 py-3 font-semibold leading-5 tracking-[0.8px] text-white !ring-offset-primary-600 transition-all hover:bg-primary-400 focus:ring-2 active:bg-primary-300">
                         Submit
                     </button>
