added add user page

--- a/Applied Sciences Research Center Website/wwwroot/html/contact-us.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/contact-us.html
@@ -19,7 +19,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
-    <title>About Us</title>
+    <title>Contact Us</title>
 </head>
 
 <body>
@@ -51,7 +51,7 @@
                 <form>
                     <div id="logged-in-options" hidden>
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             <i class=" bi bi-person-circle "></i>
                         </button>
                         <ul class=" dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
