--- a/Applied Sciences Research Center Website/wwwroot/html/login.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/login.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../css/login.css">
     <script src="../js/login.js"></script>
 
-    <title>Home Page</title>
+    <title>Login</title>
 </head>
 
 <body>
