--- a/Applied Sciences Research Center Website/wwwroot/html/publications.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/publications.html
@@ -18,7 +18,7 @@
     <script src="../js/publications.js"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <title>About Us</title>
+    <title>Publications</title>
 
 </head>
 
@@ -52,7 +52,7 @@
                 <form>
                     <div id="logged-in-options" hidden>
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             <i class=" bi bi-person-circle "></i>
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
