--- a/Applied Sciences Research Center Website/wwwroot/html/publications.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/publications.html
@@ -84,7 +84,7 @@
         </div>
     </div>
 
-    <div class="container my-5" id="add-research-paper">
+    <div class="container my-5" id="add-research-paper" hidden>
         <div class="card shadow-sm" style="border-radius: 24px; background-color: #F8F9FA;">
             <div class="card-body">
                 <h5 class="card-title">Add a New Research Paper</h5>
