--- a/Applied Sciences Research Center Website/wwwroot/html/admin-panel.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/admin-panel.html
@@ -17,11 +17,11 @@
     <link rel="stylesheet" href="../css/admin-panel.css">
     <script src="../js/admin-panel.js"></script>
 
-    <title>Home Page</title>
+    <title>Admin panel</title>
 </head>
 
 <body>
-   Admin panel
+    Admin panel
 </body>
 
 </html>
