--- a/Applied Sciences Research Center Website/wwwroot/html/all-publications.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/all-publications.html
@@ -14,14 +14,13 @@
     <script src="../js/script.js"></script>
     <link rel="stylesheet" href="../css/style.css">
 
-    <link rel="stylesheet" href="../css/publications.css">
-    <script src="../js/publications.js"></script>
+    <link rel="stylesheet" href="../css/all-publications.css">
+    <script src="../js/all-publications.js"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <title>Publications</title>
 
 </head>
-
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light navbar-first">
