Frontend: UI fix

--- a/Applied Sciences Research Center Website/wwwroot/html/all-publications.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/all-publications.html
@@ -65,12 +65,12 @@
     </nav>
 
     <div class="navbar-custom d-flex align-items-center">
-        <li><a href="" class="navbar-brand fw-bold">Recent</a></li>
+        <a href="" class="navbar-brand fw-bold">Recent</a>
         <div>
-            <li>
+            <div class="float-start">
                 <button class="subscribe-btn">Subscribe</button>
-            </li>
-            <li>
+            </div>
+            <div class="float-end">
                 <div class="search-container ms-3">
                     <div class="input-group">
                         <span class="search-icon p-2" id="search-icon">
@@ -79,7 +79,7 @@
                         <input type="text" class="search-bar p-2" id="search-bar" placeholder="Search...">
                     </div>
                 </div>
-            </li>
+            </div>
         </div>
     </div>
 
