--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -138,6 +138,64 @@
         </div>
     </div>
 
+
+    <div class="outer-white-box">
+        <div class="container text-center mt-5">
+            <h1 class="fw-bold h1-profile">Meet Our In-House</h1>
+            <h2 class="fw-bold h2-profile">Scientists & Expert Council</h2>
+            <p class="mt-3 text-muted p-profile" , style="font-size: 24px;">
+                <!-- TODO: remove style after 1 option is decided-->
+                We work with a lot of exceptional and thoughtful people—like the researchers, professors, and experts on
+                our Zoology Faculty Research Team, who help guide paper development and academic inquiry.
+            </p>
+        </div>
+        <div class="profile-container">
+            <div class="image-section">
+                <img class="profile-image" src="https://www.lcwu.edu.pk//images/2024/09/20/najiyaalarifazoo.jpg"
+                    alt="Dr. Najiya al-Arifa, PhD">
+                <div class="image-fade"></div>
+                <div class="designation-badge">
+                    <div class="designation-text" style="font-size: 1rem;">Assistant Professor/Managing Editor</div>
+                </div>
+            </div>
+            <div class="flex-grow-1">
+                <div class="linkedin-icon">
+                    <a class="linkedin-link" target="_blank"
+                        href="https://pk.linkedin.com/in/dr-najiya-al-arifa-579051193">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
+                            style="color: #374151; height: 1.5rem; width: 1.5rem;">
+                            <path
+                                d="M23 0H1C0.4 0 0 0.4 0 1V23C0 23.6 0.4 24 1 24H23C23.6 24 24 23.6 24 23V1C24 0.4 23.6 0 23 0ZM7.1 20.5H3.6V9H7.2V20.5H7.1ZM5.3 7.4C4.2 7.4 3.2 6.5 3.2 5.3C3.2 4.2 4.1 3.2 5.3 3.2C6.4 3.2 7.4 4.1 7.4 5.3C7.4 6.5 6.5 7.4 5.3 7.4ZM20.5 20.5H16.9V14.9C16.9 13.6 16.9 11.9 15.1 11.9C13.2 11.9 13 13.3 13 14.8V20.5H9.4V9H12.8V10.6C13.3 9.7 14.4 8.8 16.2 8.8C19.8 8.8 20.5 11.2 20.5 14.3V20.5Z"
+                                fill="currentColor" />
+                        </svg>
+                    </a>
+                </div>
+                <div class="profile-name">
+                    Dr. Najiya al-Arifa, PhD
+                </div>
+                <div class="profile-title"><!--TODO: choose 1-->
+                    Assistant Professor / Zoologist
+                </div>
+                <div class="profile-description">
+                    <p>Dr. Najiya al-Arifa is an accomplished academic and researcher, serving as an Assistant Professor
+                        in the Department of Zoology at Lahore College for Women University (LCWU), Lahore, Pakistan.
+                        With a strong foundation in zoology, Dr. Najiya al-Arifa completed their Ph.D. in Zoology in
+                        2018 from Government College University (GCU), Lahore, after earning their M.Phil. and M.Sc. in
+                        the same field. Their research interests lie in immunology, toxicology, and microbiology,
+                        focusing on the impact of environmental factors like toxins, allergens, and microbes on the
+                        immune system, particularly in relation to asthma and allergies. Dr. Najiya al-Arifa has
+                        established an Immunology Research Laboratory at LCWU and has been an influential mentor,
+                        guiding numerous students at various academic levels. They have received multiple honors,
+                        including the HEC-IRSIP Scholarship, the Fauji Foundation Academic Distinction Award, and
+                        various recognitions for academic excellence. Dr. Najiya al-Arifa is also actively involved in
+                        departmental administration and social outreach, contributing to initiatives in public health
+                        and research.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Contact Us Section -->
     <section id="contact-us" class="py-5">
         <div class="container">
