--- a/Applied Sciences Research Center Website/wwwroot/html/all-publications.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/all-publications.html
@@ -68,7 +68,7 @@
         <a href="" class="navbar-brand fw-bold">Recent</a>
         <div>
             <div class="float-start">
-                <button class="subscribe-btn">Subscribe</button>
+                <button id="slideButton" class="subscribe-btn">Subscribe</button>
             </div>
             <div class="float-end">
                 <div class="search-container ms-3">
@@ -123,7 +123,7 @@
     </div>
 
     <!-- Newsletter Section -->
-    <div class="newsletter-section">
+    <div id="target" class="newsletter-section">
         <div class="row align-items-center">
             <div class="col-md-6">
                 <h2 class="newsletter-title">Join our newsletter and be the first to hear it!</h2>
