--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" id="nav-publications-button" href="#">Publications</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Events</a>
+                        <a class="nav-link" id="nav-events-button" href="#">Events</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="nav-contact-button" href="#">About Us</a>
