Index page UI improvements

--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -64,7 +64,7 @@
         </div>
     </nav>
 
-    <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div id="imageCarousel" class="carousel slide mt-3" data-bs-ride="carousel">
 
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="0" class="active"
@@ -73,7 +73,7 @@
             <button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
 
-        <div class="carousel-inner">
+        <div class="carousel-inner rounded">
             <div class="carousel-item active">
                 <div class="ratio ratio-21x9">
                     <img src="../assets/logo1.jpg" class="d-block w-100">
