--- a/Applied Sciences Research Center Website/wwwroot/html/contact-us.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/contact-us.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../css/style.css">
 
     <link rel="stylesheet" href="../css/about_us.css">
-    <script src="../js/contact_us.js"></script>
+    <script src="../js/about_us.js"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
@@ -63,6 +63,13 @@
             </div>
         </div>
     </nav>
+
+    <div class="ratio ratio-21x9">
+        <img src="../assets/LCWU.png" class="img-fluid" alt="Contact Us">
+    </div>
+    <div>
+
+    </div>
 
 
     <!-- Footer -->
